# EcsElmUI

./: Cargo.toml  LICENSE  README.md
default_style_table/: Cargo.toml
default_style_table/src/: lib.rs
src/: ARCHITECTURE.md  app.rs  errors.rs  lib.rs  traits.rs
src/app/: host_impls.rs
src/app/host_impls/default/: default_style_table.rs
src/traits/: event.rs  render.rs
type_erased_host/: Cargo.toml
type_erased_host/src/: lib.rs
types/src/: app.rs  lib.rs  render.rs  traits.rs
types/src/app/: host_impls.rs
types/src/app/host_impls/default/: default_style_table.rs
