[package]
name = "elm_ecs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
wgpu = "0.12.0"

bitmaps = "3.1.0"
cfg-if = "1"
typemap ="0.3.3"
futures = {version = "0.3", features = ["executor","thread-pool"]}


[[bin]]
name = "test"
test = false
bench = false
